# zipsearch

./: .gitignore  .readthedocs.yaml  README.md  mkdocs.yml  pyproject.toml  readme.md
.github/workflows/: build-and-release.yml
docs/: api.md  index.md  legacy.md  requirements.in  requirements.txt  zip-data.md
media/: speed_tester.py
scripts/: build_fast_indices.py  speed_tester.py
uszipcode/: __init__.py  db.py  model.py  search.py  state_abbr.py
zipsearch/: FastSearchEngine.py  __init__.py  boilerplate.py
