[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "uszipcode"
version = "0.2.0"
description = "Updated fork of uszipcode with modern dependencies"
requires-python = ">=3.11"
dependencies = [
    "atomicwrites>=1.4.1",
    "fuzzywuzzy>=0.18.0",
    "haversine>=2.9.0",
    "pathlib-mate>=1.3.2",
    "python-levenshtein>=0.12.0",
    "requests>=2.32.4",
    "sqlalchemy>=2.0.42",
    "sqlalchemy-mate>=2.0.0.3",
]

[tool.hatch.build.targets.wheel]
packages = ["uszipcode"]