[build-system]
requires = [
  "hatchling",
  "hatch-vcs"
]
build-backend = "hatchling.build"

[project]
name = "zipsearch"
dynamic = ["version"]
description = "Updated efficient lookup based on uszipcode"
requires-python = ">=3.11"
dependencies = [
]

[tool.hatch.version]
source = "vcs"
tag_regex = "^v(?P<version>\\d+\\.\\d+\\.\\d+)$"  # Only tags like v1.2.3 trigger versioning


[tool.hatch.build.targets.wheel]
packages = ["zipsearch"]

[tool.hatch.build]
include = [
  "zipsearch/bin/indices.bin"
]